feat: JVM基础参数、java四种引用